--- a/Back/AJAX/01-ajax-get/index.html
+++ b/Back/AJAX/01-ajax-get/index.html
@@ -25,7 +25,7 @@
         $('#action').click(function(){
             // 'ajax' est une methode jquery qui permet d'envoyer des requetes AJAX en HTTP grace à l'objet javascript XMLHttpRequest (objet permettant les requettes HTTP)
             $.ajax({
-                url : "ajax_infos.txt",// URL de sestination de la requete
+                url : "ajax_infos.txt",// URL de destination de la requete
                 dataType : "text",// type de données attendues
                 // en cas de sucées, la fonction anonyme s'execute
                 // il ya toujours 2 requetes AJAX: une aller et une retour
